--- a/python-java/Dockerfile
+++ b/python-java/Dockerfile
@@ -1,46 +1,40 @@
 # Используем Python образ как базовый
-FROM python:3.11-slim
+FROM python:3.11-slim-bookworm
 
 # Метаданные автора
 LABEL author="Michael Parker" maintainer="parker@pterodactyl.io"
 
-# Обновим пакеты и установим зависимости
-# Также добавим '-o APT::Get::Show-Upgraded=true' для вывода информации о пакетах, которые будут обновлены
-RUN apt-get update -y -o APT::Get::Show-Upgraded=true && apt-get install -y -qq --no-install-recommends \
-    software-properties-common \
-    curl \
-    lsof \
-    ca-certificates \
-    openssl \
-    git \
-    tar \
-    sqlite3 \
-    zip \
-    unzip \
-    fontconfig \
-    && rm -rf /var/lib/apt/lists/*
+# Обновляем и устанавливаем необходимые пакеты как для Python, так и для Java.
+RUN apt update \
+    && apt -y install git gcc g++ ca-certificates dnsutils curl iproute2 ffmpeg procps tini fontconfig \
+    && apt install -y curl lsof ca-certificates openssl git tar sqlite3 zip unzip \
+    && apt clean
 
-# Добавление репозитория Temurin и установка JDK
-RUN apt-get update -y -o APT::Get::Show-Upgraded=true && \
-    mkdir -p /usr/share/man/man1 && \
-    apt-get install -y -qq --no-install-recommends gnupg && \
-    echo "deb http://ppa.launchpad.net/eclipse-team/temurin/ubuntu focal main" | tee /etc/apt/sources.list.d/temurin.list && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys EEA14886 && \
-    apt-get update -y -o APT::Get::Show-Upgraded=true && apt-get install -y -qq openjdk-8-jdk --no-install-recommends && \
-    rm -rf /var/lib/apt/lists/*
+# Добавляем PPA для Temurin, чтобы установить Java
+RUN mkdir -p /usr/share/man/man1 \
+    && apt-get update -y \
+    && apt-get install -y software-properties-common \
+    && apt-get update -y \
+    && apt-get install -y openjdk-8-jdk
 
-# Создание пользователя
-RUN useradd -ms /bin/bash container
+# Создаем пользователя 'container'
+RUN useradd -m -d /home/container container
+
 USER container
 ENV USER=container HOME=/home/container
+
 WORKDIR /home/container
 
-# Копирование и установка прав на entrypoints
-COPY --chown=container:container entrypoint-python.sh /entrypoint-python.sh
-COPY --chown=container:container entrypoint-java.sh /entrypoint-java.sh
-RUN chmod +x /entrypoint-python.sh /entrypoint-java.sh
-
+# Устанавливаем сигнал остановки
 STOPSIGNAL SIGINT
 
+# Копируем оба entrypoint файла
+COPY --chown=container:container entrypoint-python.sh /entrypoint-python.sh
+COPY --chown=container:container entrypoint-java.sh /entrypoint-java.sh
+
+# Entry point и комманду CMD нам нужно будет объединять во время выполнения контейнера
 ENTRYPOINT ["/usr/bin/tini", "-g", "--"]
-CMD ["/bin/bash", "-c", "./entrypoint-python.sh && ./entrypoint-java.sh"]
+
+# Следующие строки - это пример, который запускает первый скрипт, а затем второй. 
+# Это может быть не то, что вам нужно в зависимости от использования.
+CMD ["/bin/bash", "-c", "/entrypoint-python.sh && /entrypoint-java.sh"]
